--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
         </button>
         <!-- Brand -->
         <a class="navbar-brand" href="#">Newton's </a>
- 			<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
+        <a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
         <form id="mobile-search">
           <input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
         </form>
@@ -120,114 +120,187 @@
         <a class="suggestion" href="#">Can't center divs</a>
         <a class="suggestion suggestions-more" href="#">More...</a>
       </div>
-  </nav>
-<!-- profile area -->
-<div class="container profile">
-  <div class="row">
+    </nav>
+    <!-- profile area -->
+    <div class="container profile">
+      <div class="row">
 
-	<div class="col-lg-8 media">
-    <div class="col-lg-12 profile-upper">
-      <div class="profile-image-and-info">
-        <img class=" user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
-		<div class="profile-user-score">
-			<center>12.000 U.S.</center>
-		</div>
-        <div class="profile-info">
-          <br>
-          <span class="info-start">Email:</span>olaola@coldmail.com
-          <br>
-          <span class="info-start">Name:</span>Joaquim
-          <br>
-          <span class="info-start">Surname:</span>Joao
-          <br>
-          <span class="info-start">Country:</span>Rwanda
-		  <br>
-			<span class="label label-default">2 years club</span>
-			<span class="label label-primary">200 questions</span>
-			<br>
-			<span class="label label-success">400 answers</span>
-			<span class="label label-info">10k user score </span>
+        <div class="hidden-xs col-lg-8 media">
+          <div class="profile-upper">
+            <div class="profile-image-and-info">
+              <img class="user_profile_pic2 img-thumbnail" src="img/profile.png" alt="user_image">
+              <hr>
+              <div class="profile-info">
+                <span class="info-start">Email: </span>olaola@coldmail.com
+                <br>
+                <span class="info-start">Name: </span>Joaquim
+                <br>
+                <span class="info-start">Surname: </span>Joao
+                <br>
+                <span class="info-start">Country: </span>Rwanda
+                <hr>
+                <div class="profile-badges">
+                  <span class="info-start">User Badges </span>
+                  <br>
+                  <span class="label label-default">2 years club</span>
+                  <span class="label label-primary">200 questions</span>
+                  <br>
+                  <span class="label label-success">400 answers</span>
+                  <span class="label label-info">10k user score </span>
+                </div>
+              </div>
+              <hr>
+              <div class="profile-down">
+                <div class="profile-topics">
+                  <label class="info-start">Most frequented topics</label> <br>
+                  <ul class="">
+                    <li><a href="#">Programming</a></li>
+                    <li><a href="#">Cooking</a></li>
+                    <li><a href="#">Suicide watch</a></li>
+                    <li><a href="#">Mathematics</a></li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-8 profile-user-and-desc">
+              <div class="media-body profile-username">
+                mlady
+              </div>
+              <div class="profile-user-score">
+                <span class="user_score"> 12.000 </span> user score
+              </div>
+              <hr>
+              <div class="profile-desc">
+                Prism letterpress farm-to-table, food truck butcher seitan tilde tacos glossier affogato activated charcoal kombucha dreamcatcher. Copper mug wayfarers tumeric snackwave normcore, freegan kitsch organic humblebrag kickstarter hella quinoa skateboard. Jean shorts ethical pug, fashion axe wayfarers trust fund YOLO man bun live-edge af brunch mumblecore fam actually thundercats. Master cleanse VHS pork belly, flannel live-edge glossier man bun. Aesthetic celiac you probably haven't heard of them.
+              </div>
+            </div>
+          </div>
+
         </div>
-      </div>
 
-      <div class="profile-user-and-desc">
-      <div class="media-body profile-username">
-          mlady
-      </div>
-      <div class="profile-desc">
-          Prism letterpress farm-to-table, food truck butcher seitan tilde tacos glossier affogato activated charcoal kombucha dreamcatcher. Copper mug wayfarers tumeric snackwave normcore, freegan kitsch organic humblebrag kickstarter hella quinoa skateboard. Jean shorts ethical pug, fashion axe wayfarers trust fund YOLO man bun live-edge af brunch mumblecore fam actually thundercats. Master cleanse VHS pork belly, flannel live-edge glossier man bun. Aesthetic celiac you probably haven't heard of them.
+        <div class="container hidden-sm hidden-md hidden-lg mobile_profile">
+          <div class="profile-user-and-desc">
+            <div class="row">
+              <div class="col-xs-8">
+                <div class="media-body profile-username">
+                  mlady
+                </div>
+                <div class="profile-user-score">
+                  <span class="user_score"> 12.000 </span> user score
+                </div>
+              </div>
+              <div class="col-xs-4 text-right">
+                <img class="user_profile_pic2 img-thumbnail" src="img/profile.png" alt="user_image">
+              </div>
+            </div>
+
+            <hr>
+
+            <div class="row">
+              <div class="col-xs-12 profile-info">
+                <span class="info-start">Email: </span>olaola@coldmail.com
+                <br>
+                <span class="info-start">Name: </span>Joaquim
+                <br>
+                <span class="info-start">Surname: </span>Joao
+                <br>
+                <span class="info-start">Country: </span>Rwanda
+              </div>
+            </div>
+
+            <hr>
+
+            <div class="row">
+              <div class="col-xs-12 profile-desc">
+                Prism letterpress farm-to-table, food truck butcher seitan tilde tacos glossier affogato activated charcoal kombucha dreamcatcher. Copper mug wayfarers tumeric snackwave normcore, freegan kitsch organic humblebrag kickstarter hella quinoa skateboard. Jean shorts ethical pug, fashion axe wayfarers trust fund YOLO man bun live-edge af brunch mumblecore fam actually thundercats. Master cleanse VHS pork belly, flannel live-edge glossier man bun. Aesthetic celiac you probably haven't heard of them.
+
+                <hr>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-6 profile-badges">
+                <span class="info-start">User Badges </span>
+                <br>
+                <span class="label label-default">2 years club</span>
+                <span class="label label-primary">200 questions</span>
+                <br>
+                <span class="label label-success">400 answers</span>
+                <span class="label label-info">10k user score </span>
+              </div>
+              <div class="col-xs-6 profile-topics">
+                <label class="info-start">Most frequented topics</label> <br>
+                <ul class="">
+                  <li><a href="#">Programming</a></li>
+                  <li><a href="#">Cooking</a></li>
+                  <li><a href="#">Suicide watch</a></li>
+                  <li><a href="#">Mathematics</a></li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+
+            <hr>
+        </div>
+
+        <div class="col-lg-4 container-fluid profile-q-and-a">
+          <div class="extras_suggested">
+            <label class="related_label"> Submitted Questions </label>
+            <ul class="list-group" >
+              <li><a class="list-group-item suggestion" href="#">How to start up Bootstrap?<span class="badge">12</span></a></li>
+              <li><a class="list-group-item suggestion" href="#">How to line divs in CSS?<span class="badge">30</span></a></li>
+              <li><a class="list-group-item suggestion" href="#">HTML help?<span class="badge">1k</span></a></li>
+              <li><a class="list-group-item suggestion" href="#">Can't center divs<span class="badge">59</span></a></li>
+            </ul>
+          </div>
+          <hr>
+          <div class="extras_suggested">
+            <label class="related_label"> Submitted Answers </label>
+            <ul class="list-group" >
+              <li><a class="list-group-item suggestion" href="#">Yes, you can charge your phone in the microwave. <span class="badge"></span></a></li>
+              <li><a class="list-group-item suggestion" href="#">No that's illegal.<span class="badge"></span></a></li>
+              <li><a class="list-group-item suggestion" href="#">How would i know.<span class="badge"></span></a></li>
+              <li><a class="list-group-item suggestion" href="#">Yes cups are used for that too.<span class="badge"></span></a></li>
+            </ul>
+          </div>
+          <hr>
+
         </div>
       </div>
     </div>
-    <div class="col-lg-12 profile-down">
-
-      <div class="col-lg-4 profile-topics">
-        <label class="related_label" style="font-size:1.2em;">Most frequented topics</label> <hr>
-        <ul class="">
-          <li><a href="#">Programming</a></li>
-          <li><a href="#">Cooking</a></li>
-          <li><a href="#">Suicide watch</a></li>
-          <li><a href="#">Mathematics</a></li>
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <ul>
+          <li><a href="#">about us</a></li>
+          <li><a href="#">contact</a></li>
+          <li><a href="#">help</a></li>
+          <li><a href="#">feedback</a></li>
         </ul>
+        <p class="text-muted">created by lbaw1651</p>
+        <p class="text-muted">lbaw 2016/17 @ feup</p>
       </div>
+    </footer>
 
-    </div>
-  </div>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-	<div class="col-lg-4 container-fluid profile-q-and-a">
-    <div class="extras_suggested">
-		<label class="related_label"> User questions </label>
-		<ul class="list-group" >
-			<li><a class="list-group-item suggestion" href="#">How to start up Bootstrap?<span class="badge">12</span></a></li>
-			<li><a class="list-group-item suggestion" href="#">How to line divs in CSS?<span class="badge">30</span></a></li>
-			<li><a class="list-group-item suggestion" href="#">HTML help?<span class="badge">1k</span></a></li>
-			<li><a class="list-group-item suggestion" href="#">Can't center divs<span class="badge">59</span></a></li>
-		</ul>
-	  </div>
-    <hr>
-    <div class="extras_suggested">
-		<label class="related_label"> User answers </label>
-		<ul class="list-group" >
-			<li><a class="list-group-item suggestion" href="#">Yes, you can charge your phone in the microwave. <span class="badge"></span></a></li>
-			<li><a class="list-group-item suggestion" href="#">No that's illegal.<span class="badge"></span></a></li>
-			<li><a class="list-group-item suggestion" href="#">How would i know.<span class="badge"></span></a></li>
-			<li><a class="list-group-item suggestion" href="#">Yes cups are used for that too.<span class="badge"></span></a></li>
-		</ul>
-	  </div>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='https://www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+      </script>
 
-  </div>
-</div>
-</div>
-<!-- Footer -->
-<footer>
-  <div class="container">
-    <ul>
-      <li><a href="#">about us</a></li>
-      <li><a href="#">contact</a></li>
-      <li><a href="#">help</a></li>
-      <li><a href="#">feedback</a></li>
-    </ul>
-    <p class="text-muted">created by lbaw1651</p>
-    <p class="text-muted">lbaw 2016/17 @ feup</p>
-  </div>
-</footer>
-
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-  e.src='https://www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-  </script>
-
-  <!-- Bootstrap javascript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</body>
-</html>
+      <!-- Bootstrap javascript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </body>
+    </html>
