José Castelo Preto

--- a/new_topic.html
+++ b/new_topic.html
@@ -102,20 +102,13 @@
     <div id="extras-side-nav" class="side-nav">
       <div class="panel side-nav-guidelines">
         <div class="panel-body">
-          <h3>on creating a topic</h3>
+          <h3>creating a topic</h3>
           <hr>
-          <p>In this section you can post a question to ask the Newton's Apple community. We value relevant questions above all, so any question is subject of the vote system and filtered therein.</p>
-          <p>We highly encourage browsing thoroughly through our database of questions before posting. Someone else may have posted it before!</p>
-          <p>If all research has failed and you still need an answer, please follow these guidelines on posting a question:</p>
+          <p>Create a topic if its highly requested or in case of need.</p>
+          <p>Make the topic information is clear and add atleast 5 rules to maintain order on the topic.</p>
+          <p>Make sure to assign atleast 5 Moderators to it so nothing goes bananas content wise.</p>
+		  <p>See if there is any user worth promoting to Moderate this topic to avoid Moderator overwork</p>
           <hr>
-          <ul>
-            <li>Don't spam our topics with questions.</li>
-            <li>Don't ask for votes.</li>
-            <li>Don't post inappropriate content, links, or images.</li>
-            <li>Be concise, but thorough.</li>
-            <li>Be relevant and helpful.</li>
-            <li><strong>Be open to any answer, but settle for the best.</strong></li>
-          </ul>
       </div>
       </div>
     </div>
@@ -129,48 +122,33 @@
         <label class="tools_label"> guidelines <span class="glyphicon glyphicon-question-sign"></span></label>
         <hr>
         <div class="guidelines_side">
-          <h1>on creating a topic</h1>
-          <p>Create a topic if its highly requested only or incase of need.</p>
+          <h1>creating a topic</h1>
+          <p>Create a topic if its highly requested or in case of need.</p>
           <p>Make the topic information is clear and add atleast 5 rules to maintain order on the topic.</p>
           <p>Make sure to assign atleast 5 Moderators to it so nothing goes bananas content wise.</p>
-          <ul class="well">
-            <li>Don't spam our topics with questions.</li>
-            <li>Don't ask for votes.</li>
-            <li>Don't post inappropriate content, links, or images.</li>
-            <li>Be concise, but thorough.</li>
-            <li>Be relevant and helpful.</li>
-            <li><strong>Be open to any answer, but settle for the best.</strong></li>
-          </ul>
+		  <p>See if there is any user worth promoting to Moderate this topic to avoid Moderator overwork</p>
         </div>
         <hr>
       </div>
 
       <div class="ask_area col-sm-8 col-lg-pull-4 col-md-pull-4 col-sm-pull-4">
-        <h1 class="hidden-lg hidden-md hidden-sm">Ask a Question</h1>
+        <h1 class="hidden-lg hidden-md hidden-sm">Create Topic</h1>
         <div class="form-group well">
-          <label for="question_header_title" class="col-2 col-form-label">Your Question</label>
-          <textarea class="form-control" rows="1" id="question_header_title" placeholder="enter your question here"></textarea>
+          <label for="question_header_title" class="col-2 col-form-label">Topic Name</label>
+          <textarea class="form-control" rows="1" id="question_header_title" placeholder="enter your topic name here"></textarea>
           <hr>
-          <label for="question_header_contents" class="col-2 col-form-label">More Information (optional)</label>
-          <textarea class="form-control" rows="5" id="question_header_contents" placeholder="provide context for your question"></textarea>
+          <label for="question_header_contents" class="col-2 col-form-label">Information about Topic</label>
+          <textarea class="form-control" rows="5" id="question_header_contents" placeholder="write down the content you wish to see questions about"></textarea>
+		  <hr>
+		  <label for="question_header_contents" class="col-2 col-form-label">Rules of the website (optional):</label>
+          <textarea class="form-control" rows="1" placeholder="enter your rules, separated by commas"></textarea>
         </div>
-        <div class="well pick_topic">
-          <div class="form-group">
-            <label >Topic:</label>
-            <select class="form-control">
-              <option>programming</option>
-              <option>mathematics</option>
-              <option>biology</option>
-              <option>rocket science</option>
-            </select>
-          </div>
-        </div>
-        <div class="well pick_tags">
-          <label>Pick tags (optional):</label>
-          <textarea class="form-control" rows="1" placeholder="enter your tags, separated by commas"></textarea>
+		
+        <div class="well">
+			<p><span class="glyphicon glyphicon-warning-sign"></span> Remember: You can later edit anything on the topic page except the name!</p>
         </div>
 
-        <div class="text-right"><button class="btn">Submit Question</button></div>
+        <div class="text-right"><button class="btn">Submit</button></div>
 
         <div class="buffer_area"></div>
       </div>
