fixing topic page

--- a/topic.html
+++ b/topic.html
@@ -155,89 +155,117 @@
       <div class="ask_area col-sm-8 col-lg-pull-4 col-md-pull-4 col-sm-pull-4">
         <h1 class="hidden-lg hidden-md hidden-sm topicTitle">Music</h1>
 		<p class="hidden-lg hidden-md hidden-sm">Place of Music discussion! Come ask about how to play certain song, or ask anything related to bands or even music genres!</p>
-			<div>
-				<div class="question well">
-					<h2 class ="questionTitle"><a href="#">Am I doin this right?</a> </h2>
-					<p class="questionInfo">
-						asked by <a href="#" class="writer"> McFeggit </a> on 4/20/6969 in
-						<a class="topic" href="#"> Music </a>
-						<button type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 420 </span>
-						</button>
-						<button type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 56 </span>
-						</button>
-					</p>
-					<div class="postBody">
+		<div>
+			<div class="question well">
+				<h2 class ="questionTitle"><a href="#">Am I doin this right?</a> </h2>
+				<p class="questionInfo">
+					asked by <a href="#" class="writer"> McFeggit </a> on 4/20/6969
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 420 </span>
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 56 </span>
+					</button>
+				</p>
+				<div class="postBody">
+					<div class="collapse-group">
+						<p class="smallText">
+							We're no strangers to love
+							You know the rules and so do I
+							A full commitment's what I'm thinking of
+							You wouldn't get this from any other guy
+							I just wanna tell you how I'm feeling
+							Gotta make you understand
+						</p>
+						<p class="collapse">
+							Never gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youWe've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itAnd if you ask me how I'm feelingDon't tell me you're too blind to seeNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you(Ooh, give you up)(Ooh, give you up)Never gonna give, never gonna give(Give you up)Never gonna give, never gonna give(Give you up)We've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itI just wanna tell you how I'm feelingGotta make you understandNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you
+						</p>
+						<p><a class="viewmore" href="#">View more..</a></p>
+					</div>
+					<hr>
+					<div class="bestanswer">
 						<div class="collapse-group">
-							<p class="smallText">
-								We're no strangers to love
-								You know the rules and so do I
-								A full commitment's what I'm thinking of
-								You wouldn't get this from any other guy
-								I just wanna tell you how I'm feeling
-								Gotta make you understand
+							<p class="answer">
+								gr8 b8 m8 i r8 8/8 :)
 							</p>
-							<p class="collapse">
-								Never gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youWe've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itAnd if you ask me how I'm feelingDon't tell me you're too blind to seeNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you(Ooh, give you up)(Ooh, give you up)Never gonna give, never gonna give(Give you up)Never gonna give, never gonna give(Give you up)We've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itI just wanna tell you how I'm feelingGotta make you understandNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you
-							</p>
-							<p><a class="viewmore" href="#">View more..</a></p>
 						</div>
-						<hr>
-						<div class="bestanswer">
-							<div class="collapse-group">
-								<p class="answer">
-									gr8 b8 m8 i r8 8/8 :)
-								</p>
-							</div>
-							<p class="writerInfo">
-								answered by <a href="#" class="writer"> McFeggit </a> on 4/20/6969
-							</p>
-							<button type="button" class="btn btn-default">
-								<span aria-hidden="true"> Add an Answer </span>
-							</button>
-						</div>
+						<p class="writerInfo">
+							answered by <a href="#" class="writer"> McFeggit </a> on 4/20/6969
+						</p>
+						<button type="button" class="btn btn-default">
+							<span aria-hidden="true"> Add an Answer </span>
+						</button>
 					</div>
 				</div>
+			</div>
 				
-				<div class="question well">
-					<h2 class ="questionTitle"><a href="#">DIY coloring book cliche gentrify keytar microdosing?</a></h2>
+			<div class="question well">
+				<h2 class ="questionTitle"><a href="#">Why is Evanescence a meme?</a> </h2>
 					<p class="questionInfo">
-						asked by <a href="#" class="writer"> LumberJack Pete </a> on 5/10/1945 in
-						<a class="topic" href="#"> Drugs&Alcohol </a>
+						asked by <a href="#" class="writer"> Britney </a> on 2/5/2008
 						<button type="button" class="btn btn-default">
-								<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 33 </span>
+							<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 10023 </span>
 						</button>
 						<button type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 56 </span>
+							<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 2 </span>
 						</button>
 					</p>
 					<div class="postBody">
 						<div class="collapse-group">
 							<p class="smallText">
-								:'( mi wife left, updoots will save me friend
+								I just simply don't understand...
 							</p>
 						</div>
-						<hr>
-						<div class="bestanswer">
-							<div class="collapse-group">
-								<p class="answer">
-									Bushwick iceland jianbing live-edge. Mumblecore polaroid XOXO heirloom venmo salvia, church-key iPhone pinterest. Photo booth taxidermy normcore, shoreditch church-key mumblecore keytar. VHS pok pok skateboard salvia forage. Tumblr tofu plaid disrupt lo-fi, cronut raclette ramps XOXO synth. Swag artisan XOXO, keffiyeh listicle gastropub neutra drinking vinegar. Fixie microdosing fap tote bag direct trade franzen, deep v lumbersexual fashion axe master cleanse keffiyeh kickstarter brooklyn.
-								</p>
-								<p class="collapse">
-									Paleo freegan mumblecore migas heirloom craft beer banjo. Tofu tousled etsy actually kombucha. You probably haven't heard of them try-hard sriracha truffaut. Cray affogato man braid kitsch. Swag raw denim fingerstache, health goth ugh jianbing church-key try-hard seitan post-ironic viral microdosing salvia chicharrones. Green juice chartreuse deep v, helvetica chambray cred hashtag scenester cornhole. Readymade unicorn put a bird on it mumblecore, mixtape pok pok woke forage iPhone master cleanse vinyl squid farm-to-table jianbing brunch.
-								</p>
-								<p><a class="viewmore" href="#">View more..</a></p>
-							</div>
-							<p class="writerInfo">
-								answered by <a href="#" class="writer"> Sensitive Jew Paul </a> on 4/20/6969
+					<hr>
+					<div class="bestanswer">
+						<div class="collapse-group">
+							<p class="answer">
+								Dude 2001~2004 were a meme. Deal with it.
 							</p>
-							<button type="button" class="btn btn-default">
-								<span aria-hidden="true"> Add an Answer </span>
-							</button>
 						</div>
+						<p class="writerInfo">
+							answered by <a href="#" class="writer"> Freddy Mercury </a> on 13/2/2018
+						</p>
+						<button type="button" class="btn btn-default">
+							<span aria-hidden="true"> Add an Answer </span>
+						</button>
 					</div>
 				</div>
+			</div>
+			
+			<div class="question well">
+				<h2 class ="questionTitle"><a href="#">What's the most depressing song you know?</a> </h2>
+					<p class="questionInfo">
+						asked by <a href="#" class="writer"> Frank Pacific Ocean </a> on 2/5/2016
+						<button type="button" class="btn btn-default">
+							<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 1741 </span>
+						</button>
+						<button type="button" class="btn btn-default">
+							<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 89 </span>
+						</button>
+					</p>
+					<div class="postBody">
+						<div class="collapse-group">
+							<p class="smallText">
+								I want to feel inspired
+							</p>
+						</div>
+					<hr>
+					<div class="bestanswer">
+						<div class="collapse-group">
+							<p class="answer">
+								Uhm tough question, maybe this: <a href="https://www.youtube.com/watch?v=feA64wXhbjo"> Shooting Star</a> . I cry everitime :'(
+							</p>
+						</div>
+						<p class="writerInfo">
+							answered by <a href="#" class="writer"> Freddy Mercury </a> on 13/2/2018
+						</p>
+						<button type="button" class="btn btn-default">
+							<span aria-hidden="true"> Add an Answer </span>
+						</button>
+					</div>
+				</div>
+			</div>
 		</div>
       </div>
     </div>
