Landing page redesign

--- a/question.html
+++ b/question.html
@@ -222,6 +222,7 @@
                 <span class="answer_hour">15:26</span>
               </div>
               <div class="answer_votes">
+                <a class="badge" href="#"><span class="glyphicon glyphicon-ok"></span></a>
                 <button type="button" class="btn btn-default comment_btn">
                   <span aria-hidden="true">comment</span>
                 </button>
