--- a/landing.html
+++ b/landing.html
@@ -68,7 +68,46 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="navbar-highlight"><a href="#">ask</a></li>
           <li><a href="#">sign up</a></li>
-          <li><a href="#">sign in</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#myModal">sign in</a></li>
+
+          <!-- Modal -->
+          <div id="myModal" class="modal fade container col-xs-12" role="dialog">
+            <div class="modal-dialog">
+
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title"><center>Sign in to Newton's Apple</center></h4>
+                </div>
+                <div class="modal-body">
+                  <div class="form-group">
+            			    <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Username/Email" tabindex="3">
+            			</div>
+                  <div class="form-group">
+          				    <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Password" tabindex="6">
+          				</div>
+                  <div><button type="button" class="btn btn-default" data-dismiss="modal">Sign in</button></div>
+                </div>
+
+                <div class="modal-footer">
+                  <div class="row">
+            			    <div class="col-xs-6 col-md-6">
+            				<a class="btn btn-block btn-social btn-google">
+            				    <i class="fa fa-google" aria-hidden="true"></i> Sign in with Google
+            				</a>
+            			    </div>
+                      <div class="col-lg-3"></div>
+            			    <div class="col-md-3"><button type="button" class="btn btn-default" data-dismiss="modal">Close</button></div>
+            			</div>
+
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+
         </ul>
 
         <form class="navbar-form navbar-right">
@@ -88,7 +127,7 @@
     <div id="my-side-nav" class="side-nav">
       <div class="side-nav-auth">
         <a href="#">sign up</a>
-        <a href="#">sign in</a>
+        <a href="#" data-toggle="modal" data-target="#myModal">sign in</a>
       </div>
       <hr>
       <div class="side-nav-options">
