--- a/register.html
+++ b/register.html
@@ -156,7 +156,7 @@
 			    <div class="col-xs-12 col-md-6">
 				<label>or</label>
 				<a class="btn btn-block btn-social btn-google">
-				    <i class="fa fa-google" aria-hidden="true"></i> Sign in with Google
+				    <i class="fa fa-google" aria-hidden="true"></i> Sign up with Google
 				</a>
 			    </div>
 			    <div class="col-md-3"></div>
