Fixed test :palm_tree:

--- a/profile.html
+++ b/profile.html
@@ -131,11 +131,11 @@
               <img class="user_profile_pic2 img-thumbnail" src="img/profile.png" alt="user_image">
               <hr>
               <div class="profile-info">
-                <span class="info-start">Email: </span>olaola@coldmail.com
+                <span class="info-start">Email: </span>jjmendes@coldmail.com
                 <br>
-                <span class="info-start">Name: </span>Joaquim
+                <span class="info-start">Name: </span>Joaquim João
                 <br>
-                <span class="info-start">Surname: </span>Joao
+                <span class="info-start">Surname: </span>Mendes
                 <br>
                 <span class="info-start">Country: </span>Rwanda
                 <hr>
@@ -156,7 +156,7 @@
                   <ul class="">
                     <li><a href="#">Programming</a></li>
                     <li><a href="#">Cooking</a></li>
-                    <li><a href="#">Suicide watch</a></li>
+                    <li><a href="#">Science</a></li>
                     <li><a href="#">Mathematics</a></li>
                   </ul>
                 </div>
@@ -166,14 +166,14 @@
 
             <div class="col-lg-8 profile-user-and-desc">
               <div class="media-body profile-username">
-                mlady
+                Joaquim João Mendes
               </div>
               <div class="profile-user-score">
                 <span class="user_score"> 12.000 </span> user score
               </div>
               <hr>
               <div class="profile-desc">
-                Prism letterpress farm-to-table, food truck butcher seitan tilde tacos glossier affogato activated charcoal kombucha dreamcatcher. Copper mug wayfarers tumeric snackwave normcore, freegan kitsch organic humblebrag kickstarter hella quinoa skateboard. Jean shorts ethical pug, fashion axe wayfarers trust fund YOLO man bun live-edge af brunch mumblecore fam actually thundercats. Master cleanse VHS pork belly, flannel live-edge glossier man bun. Aesthetic celiac you probably haven't heard of them.
+                Responsible for Business Development within the Special District as well as Industry Recruitment on the Informatics area and helping existing business grow and expand.I report to a board of 7 Directors and sets the planning for the 8 thousand acre District when it concerns Incentives to large and small industry, tax planning for abatements and tax credits given as incentives.
               </div>
             </div>
           </div>
@@ -185,7 +185,7 @@
             <div class="row">
               <div class="col-xs-8">
                 <div class="media-body profile-username">
-                  mlady
+                  Joaquim João Mendes
                 </div>
                 <div class="profile-user-score">
                   <span class="user_score"> 12.000 </span> user score
@@ -200,11 +200,11 @@
 
             <div class="row">
               <div class="col-xs-12 profile-info">
-                <span class="info-start">Email: </span>olaola@coldmail.com
+                <span class="info-start">Email: </span>jjmendes@coldmail.com
                 <br>
-                <span class="info-start">Name: </span>Joaquim
+                <span class="info-start">Name: </span>Joaquim João
                 <br>
-                <span class="info-start">Surname: </span>Joao
+                <span class="info-start">Surname: </span>Mendes
                 <br>
                 <span class="info-start">Country: </span>Rwanda
               </div>
@@ -235,7 +235,7 @@
                 <ul class="">
                   <li><a href="#">Programming</a></li>
                   <li><a href="#">Cooking</a></li>
-                  <li><a href="#">Suicide watch</a></li>
+                  <li><a href="#">Science</a></li>
                   <li><a href="#">Mathematics</a></li>
                 </ul>
               </div>
@@ -254,6 +254,7 @@
               <li><a class="list-group-item suggestion" href="#">How to line divs in CSS?<span class="badge">30</span></a></li>
               <li><a class="list-group-item suggestion" href="#">HTML help?<span class="badge">1k</span></a></li>
               <li><a class="list-group-item suggestion" href="#">Can't center divs<span class="badge">59</span></a></li>
+			  <li><a class="viewmore" href="#">View All questions</a></li>
             </ul>
           </div>
           <hr>
@@ -264,6 +265,7 @@
               <li><a class="list-group-item suggestion" href="#">No that's illegal.<span class="badge"></span></a></li>
               <li><a class="list-group-item suggestion" href="#">How would i know.<span class="badge"></span></a></li>
               <li><a class="list-group-item suggestion" href="#">Yes cups are used for that too.<span class="badge"></span></a></li>
+			  <li><a class="viewmore" href="#">View All Answers</a></li>
             </ul>
           </div>
           <hr>
