--- a/search.html
+++ b/search.html
@@ -136,9 +136,9 @@
 			</div>
 			<hr>
 			<div class="question">
-				<h2 class ="questionTitle"><a href="#">Am I doin this right?</a> </h2>
+				<h2 class ="questionTitle"><a href="#">Am I doing this right? Need advise on this lyrics</a> </h2>
 				<p class="questionInfo">
-					asked by <a href="#" class="writer"> McFeggit </a> on 4/20/6969 in
+					asked by <a href="#" class="writer"> Rick Astley </a> on 4/20/1983 in
 					<a class="topic" href="#"> Music </a>
 					<button type="button" class="btn btn-default">
 						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 420 </span>
@@ -150,32 +150,24 @@
 				<div class="postBody">
 					<div class="collapse-group">
 						<p class="smallText">
-							We're no strangers to love
-							You know the rules and so do I
-							A full commitment's what I'm thinking of
-							You wouldn't get this from any other guy
-							I just wanna tell you how I'm feeling
-							Gotta make you understand
+							I wrote down a song and need to know if it is any good, I guess you guys could help.
 						</p>
 						<p class="collapse">
-							Never gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youWe've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itAnd if you ask me how I'm feelingDon't tell me you're too blind to seeNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you(Ooh, give you up)(Ooh, give you up)Never gonna give, never gonna give(Give you up)Never gonna give, never gonna give(Give you up)We've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itI just wanna tell you how I'm feelingGotta make you understandNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you
+							Never gonna give you up Never gonna let you down Never gonna run around and desert you Never gonna make you cry Never gonna say goodbyeNever gonna tell a lie and hurt youWe've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itAnd if you ask me how I'm feelingDon't tell me you're too blind to seeNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you(Ooh, give you up)(Ooh, give you up)Never gonna give, never gonna give(Give you up)Never gonna give, never gonna give(Give you up)We've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itI just wanna tell you how I'm feelingGotta make you understandNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you
 						</p>
 						<p><a class="viewmore" href="#">View more..</a></p>
 					</div>
 				</div>
 				<div class="question_tags">
                   <a class="label label-default" href="#">music</a>
-                  <a class="label label-default" href="#">meme</a>
-                  <a class="label label-default" href="#">sarcasm</a>
-				  <a class="label label-default" href="#">you</a>
-				  <a class="label label-default" href="#">got</a>
-				  <a class="label label-default" href="#">rickroll'd</a>
+                  <a class="label label-default" href="#">lyrics</a>
+				  <a class="label label-default" href="#">rickroll</a>
                 </div>
 				<hr>
 			</div>
 			<hr>
 			<div class="question">
-				<h2 class ="questionTitle"><a href="#">Why is Evanescence a meme?</a> </h2>
+				<h2 class ="questionTitle"><a href="#">My piano seems a bit off tune. Did anyone else have this problem?</a> </h2>
 				<p class="questionInfo">
 					asked by <a href="#" class="writer"> Britney </a> on 2/5/2008 in
 					<a class="topic" href="#"> Music </a>
@@ -189,16 +181,15 @@
 				<div class="postBody">
 					<div class="collapse-group">
 						<p class="smallText">
-							I just simply don't understand...
+							Sounds very strange to me. When i press a key the sound progressively changes.
 						</p>
 					</div>
 				</div>
 				<div class="question_tags">
                   <a class="label label-default" href="#">music</a>
-                  <a class="label label-default" href="#">meme</a>
-                  <a class="label label-default" href="#">evanescence</a>
-				  <a class="label label-default" href="#">love</a>
-				  <a class="label label-default" href="#">depression</a>
+                  <a class="label label-default" href="#">piano</a>
+				  <a class="label label-default" href="#">sound</a>
+				  <a class="label label-default" href="#">problem</a>
                 </div>
 				<hr>
 			</div>
