--- a/topic.html
+++ b/topic.html
@@ -156,9 +156,10 @@
 		<p class="hidden-lg hidden-md hidden-sm">Place of Music discussion! Come ask about how to play certain song, or ask anything related to bands or even music genres!</p>
 		<div>
 			<div class="question well">
-				<h2 class ="questionTitle"><a href="#">Am I doin this right?</a> </h2>
+				<h2 class ="questionTitle"><a href="#">Am I doing this right? Need advise on this lyrics</a> </h2>
 				<p class="questionInfo">
-					asked by <a href="#" class="writer"> McFeggit </a> on 4/20/6969
+					asked by <a href="#" class="writer"> Rick Astley </a> on 4/20/1983 in
+					<a class="topic" href="#"> Music </a>
 					<button type="button" class="btn btn-default">
 						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 420 </span>
 					</button>
@@ -169,15 +170,10 @@
 				<div class="postBody">
 					<div class="collapse-group">
 						<p class="smallText">
-							We're no strangers to love
-							You know the rules and so do I
-							A full commitment's what I'm thinking of
-							You wouldn't get this from any other guy
-							I just wanna tell you how I'm feeling
-							Gotta make you understand
+							I wrote down a song and need to know if it is any good, I guess you guys could help.
 						</p>
 						<p class="collapse">
-							Never gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youWe've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itAnd if you ask me how I'm feelingDon't tell me you're too blind to seeNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you(Ooh, give you up)(Ooh, give you up)Never gonna give, never gonna give(Give you up)Never gonna give, never gonna give(Give you up)We've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itI just wanna tell you how I'm feelingGotta make you understandNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you
+							Never gonna give you up Never gonna let you down Never gonna run around and desert you Never gonna make you cry Never gonna say goodbyeNever gonna tell a lie and hurt youWe've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itAnd if you ask me how I'm feelingDon't tell me you're too blind to seeNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you(Ooh, give you up)(Ooh, give you up)Never gonna give, never gonna give(Give you up)Never gonna give, never gonna give(Give you up)We've known each other for so longYour heart's been aching, butYou're too shy to say itInside, we both know what's been going onWe know the game and we're gonna play itI just wanna tell you how I'm feelingGotta make you understandNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt youNever gonna give you upNever gonna let you downNever gonna run around and desert youNever gonna make you cryNever gonna say goodbyeNever gonna tell a lie and hurt you
 						</p>
 						<p><a class="viewmore" href="#">View more..</a></p>
 					</div>
@@ -185,11 +181,11 @@
 					<div class="bestanswer">
 						<div class="collapse-group">
 							<p class="answer">
-								gr8 b8 m8 i r8 8/8 :)
+								Seems good! But looks like i've heard it somewhere?
 							</p>
 						</div>
 						<p class="writerInfo">
-							answered by <a href="#" class="writer"> McFeggit </a> on 4/20/6969
+							answered by <a href="#" class="writer"> McDonuts </a> on 4/20/1990
 						</p>
 						<button type="button" class="btn btn-default">
 							<span aria-hidden="true"> Add an Answer </span>
@@ -199,31 +195,33 @@
 			</div>
 				
 			<div class="question well">
-				<h2 class ="questionTitle"><a href="#">Why is Evanescence a meme?</a> </h2>
-					<p class="questionInfo">
-						asked by <a href="#" class="writer"> Britney </a> on 2/5/2008
-						<button type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 10023 </span>
-						</button>
-						<button type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 2 </span>
-						</button>
-					</p>
-					<div class="postBody">
-						<div class="collapse-group">
-							<p class="smallText">
-								I just simply don't understand...
-							</p>
-						</div>
+				<h2 class ="questionTitle"><a href="#">My piano seems a bit off tune. Did anyone else have this problem?</a> </h2>
+				<p class="questionInfo">
+					asked by <a href="#" class="writer"> Britney </a> on 2/5/2008 in
+					<a class="topic" href="#"> Music </a>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 10023 </span>
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 2 </span>
+					</button>
+				</p>
+				<div class="postBody">
+					<div class="collapse-group">
+						<p class="smallText">
+							Sounds very strange to me. When i press a key the sound progressively changes.
+						</p>
+					</div>
 					<hr>
 					<div class="bestanswer">
 						<div class="collapse-group">
 							<p class="answer">
-								Dude 2001~2004 were a meme. Deal with it.
+								If it's a old Piano it happens. You need to fix them by yourself. A youtube tutorial should do it.
+								if it's eletronic then you have to return it to the brand so they can fix it.
 							</p>
 						</div>
 						<p class="writerInfo">
-							answered by <a href="#" class="writer"> Freddy Mercury </a> on 13/2/2018
+							answered by <a href="#" class="writer"> Freddy Mercury </a> on 13/5/2008
 						</p>
 						<button type="button" class="btn btn-default">
 							<span aria-hidden="true"> Add an Answer </span>
@@ -253,7 +251,7 @@
 					<div class="bestanswer">
 						<div class="collapse-group">
 							<p class="answer">
-								Uhm tough question, maybe this: <a href="https://www.youtube.com/watch?v=feA64wXhbjo"> Shooting Star</a> . I cry everitime :'(
+								Uhm tough question, maybe this: <a href="https://www.youtube.com/watch?v=feA64wXhbjo"> Shooting Star</a> .
 							</p>
 						</div>
 						<p class="writerInfo">
