--- a/question.html
+++ b/question.html
@@ -35,8 +35,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- Brand -->
-        <a id="brand" class="navbar-brand" href="#">Newton's </a>
-        <a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
+        <a id="brand" class="navbar-brand" href="#">newton's<span class="brand-highlight">apple</span></a>
         <form id="mobile-search">
           <input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
         </form>
@@ -152,7 +151,7 @@
             <div class="media">
               <div class="media-left">
                 <a href="#">
-                  <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image">
+                  <img class="hidden-xs media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image">
                 </a>
               </div>
               <div class="media-body question_area">
@@ -210,7 +209,7 @@
             <div class="media">
               <div class="media-left">
                 <a href="#">
-                  <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
+                  <img class="hidden-xs media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
                 </a>
               </div>
               <div class="media-body answer_area">
