--- a/profile.html
+++ b/profile.html
@@ -164,7 +164,7 @@
               </div>
             </div>
 
-            <div class="col-lg-8 profile-user-and-desc">
+            <div class="profile-user-and-desc">
               <div class="media-body profile-username">
                 Joaquim João Mendes
               </div>
