Change navbar on landing page

--- a/landing.html
+++ b/landing.html
@@ -38,8 +38,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- Brand -->
-        <a id="brand" class="navbar-brand" href="#">Newton's </a>
-        <a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
+        <a id="brand" class="navbar-brand" href="#">newton's<span class="brand-highlight">apple</span></a>
         <form id="mobile-search">
           <input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
         </form>
