--- a/new_question.html
+++ b/new_question.html
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Newton's<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a> </a>
+		<a id="brand" class="navbar-brand" href="#">newton's<span class="brand-highlight">apple</span></a>
         <form id="mobile-search">
           <input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
         </form>
